...
    },
    "deny": {
      "localizations": {
        "en": {
          "stringUnit": {
            "state": "translated",
            "value": "No, do not do this"
          }
        },
        "si": {
          "stringUnit": {
            "state": "translated",
            "value": "නැහැ, මෙය නොකරන්න"
...
    },
    "familyQuestion": {
      "localizations": {
        "en": {
          "stringUnit": {
            "state": "translated",
            "value": "Is a family member helping with setup?"
          }
        },
        "si": {
          "stringUnit": {
            "state": "translated",
            "value": "සැකසීමට පවුලේ කෙනෙක් උදව් කරනවාද?"
...
    },
    "interactionQuestion": {
      "localizations": {
        "en": {
          "stringUnit": {
            "state": "translated",
            "value": "Would you like to speak, type, or use both?"
          }
        },
        "si": {
          "stringUnit": {
            "state": "translated",
            "value": "ඔබ කතා කිරීමටද, ටයිප් කිරීමටද, දෙකමද කැමති?"
...
    },
    "languageQuestion": {
      "localizations": {
        "en": {
          "stringUnit": {
            "state": "translated",
            "value": "Which language would you like?"
          }
        },
        "si": {
          "stringUnit": {
            "state": "translated",
            "value": "ඔබ කැමති භාෂාව කුමක්ද?"
...
    },
    "large": {
      "localizations": {
        "en": {
          "stringUnit": {
            "state": "translated",
            "value": "Large"
          }
        },
        "si": {
          "stringUnit": {
            "state": "translated",
            "value": "විශාල"
...
    },
    "speechRateQuestion": {
      "localizations": {
        "en": {
          "stringUnit": {
            "state": "translated",
            "value": "How fast should Mithuru speak?"
          }
        },
        "si": {
          "stringUnit": {
            "state": "translated",
            "value": "මිතුරු කොතරම් වේගයෙන් කතා කළ යුතුද?"
...
    },
    "textOnly": {
      "localizations": {
        "en": {
          "stringUnit": {
            "state": "translated",
            "value": "Type only"
          }
        },
        "si": {
          "stringUnit": {
            "state": "translated",
            "value": "ටයිප් කිරීම පමණයි"
...
    },
    "textSizeQuestion": {
      "localizations": {
        "en": {
          "stringUnit": {
            "state": "translated",
            "value": "How large should the text be?"
          }
        },
        "si": {
          "stringUnit": {
            "state": "translated",
            "value": "අකුරු කොතරම් විශාල විය යුතුද?"
...
    },
    "voiceAndText": {
      "localizations": {
        "en": {
          "stringUnit": {
            "state": "translated",
            "value": "Speak and type"
          }
        },
        "si": {
          "stringUnit": {
            "state": "translated",
            "value": "කතා කර ටයිප් කරන්න"
...
